--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,36 +1,52 @@
 .navbar {
-    display: flex;
-    justify-content: center;
+    overflow-x: auto;
+    white-space: nowrap;
     background-color: #2e3a59;
     padding: 1rem 0;
-}
-
-.navbar ul {
-    list-style: none;
+    -webkit-overflow-scrolling: touch;
+  }
+  
+  /* Enable horizontal scroll */
+  nav ul {
     display: flex;
-    gap: 2rem;
-}
-
-.navbar a {
+    gap: 1rem;
+    margin: 0;
+    padding: 0 1rem;
+    list-style: none;
+    overflow-x: auto;
+    white-space: nowrap;
+    scrollbar-width: none;
+  }
+  
+  nav ul::-webkit-scrollbar {
+    display: none;
+  }
+  
+  nav ul li {
+    flex-shrink: 0;
+  }
+  
+  nav ul li a {
     color: white;
     text-decoration: none;
     font-size: 1rem;
     transition: color 0.3s;
-}
-
-.navbar a:hover {
+    padding: 0.5rem 0.75rem;
+  }
+  
+  nav ul li a:hover {
     color: #4e91fc;
-}
-
-.navbar a[download] {
+  }
+  
+  nav ul li a[download] {
     background-color: #4e91fc;
     color: white;
     padding: 0.5rem 1rem;
     border-radius: 5px;
     font-weight: bold;
-}
-
-.navbar a[download]:hover {
+  }
+  
+  nav ul li a[download]:hover {
     background-color: #377edb;
-    color: white;
-}
+  }
+  
